# GRPD

./: .clangd  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  CMakePresets.json  CONTACT_SYSTEM_TODOS.md  Contact_Implementation_Plan.md  Contact_V5_Architecture_Plan.md  DEVELOPER_GUIDE.md  Doxyfile  Doxyfile.bak  Fracture_IMEX_Plan.md  GEMINI.md  GRPD_AI_Context.md  GRPD_YAML_Dictionary.md  Generate_PPT_Diagrams.html  README.md  Triaxiality_Implementation_Plan.md  compile_flags.txt.bak  export_ai_context.py  fix_guards.ps1  rename_fracture.py  replace.py  replace_cmake.py  replace_engine.py  requirements.txt  revert_zhang.py  script.py  setup_build.cmd  setup_build.sh  setup_env.cmd  setup_env.ps1  tmp.cpp  update_yaml.py  架构说明_PPT.md
PDCommon/: CMakeLists.txt  dummy.cpp
PDCommon/BC/: CMakeLists.txt
PDCommon/BC/include/: BC.h  BCManager.h  BCRegistry.h  MechanicalBC.h  ThermalBC.h
PDCommon/BC/src/: BC.cpp  BCManager.cpp  BCRegistry.cpp  MechanicalBC.cpp  ThermalBC.cpp
PDCommon/Contact/: CMakeLists.txt
PDCommon/Contact/include/: ContactManager.h  ContactRegistry.h  ContactSpatialGrid.h  ElasticStickSlipLaw.h  ExplicitImpulseFrictionLaw.h  GeneralContact.h  IContactAlgorithm.h  IContactEvaluator.h  IContactForceLaw.h  IFrictionLaw.h  KinematicContact.h  KinematicForceLaw.h  NTCEvaluator.h  NTNContact.h  NTNEvaluator.h  NTSEvaluator.h  NodeNodeContact.h  NodeSurfaceContact.h  NonlinearPenaltyContact.h  NonlinearPenaltyForceLaw.h  PenaltyContact.h  PenaltyForceLaw.h  SillingContact.h  SillingForceLaw.h  SurfaceDetector.h  TanhFrictionLaw.h  ViscousForceLaw.h  ViscousPenaltyContact.h
PDCommon/Contact/src/: ContactManager.cpp  ContactRegistry.cpp  ContactSpatialGrid.cpp  ElasticStickSlipLaw.cpp  ExplicitImpulseFrictionLaw.cpp  GeneralContact.cpp  KinematicContact.cpp  KinematicForceLaw.cpp  NTCEvaluator.cpp  NTNContact.cpp  NTNEvaluator.cpp  NTSEvaluator.cpp  NodeNodeContact.cpp  NodeSurfaceContact.cpp  NonlinearPenaltyContact.cpp  NonlinearPenaltyForceLaw.cpp  PenaltyContact.cpp  PenaltyForceLaw.cpp  SillingContact.cpp  SillingForceLaw.cpp  SurfaceDetector.cpp  TanhFrictionLaw.cpp  ViscousForceLaw.cpp  ViscousPenaltyContact.cpp
PDCommon/Core/: CMakeLists.txt
PDCommon/Core/include/: PDContext.h  PDSimulater.h
PDCommon/Core/src/: PDContext.cpp  PDSimulater.cpp
PDCommon/Damage/: CMakeLists.txt
PDCommon/Damage/include/: CriticalStretch.h  DamageModel.h  DamageRegistry.h  EqPSDamage.h  PreCrackModel.h  PreCrackRegistry.h  QuadCrack.h
PDCommon/Damage/src/: CriticalStretch.cpp  DamageModel.cpp  DamageRegistry.cpp  EqPSDamage.cpp  QuadCrack.cpp
PDCommon/Field/: CMakeLists.txt
PDCommon/Field/include/: Field.h  FieldManager.h  FieldRegistry.h  MechanicalFields.h  PhysicsFieldRegistry.h  PhysicsFields.h  ThermalFields.h  TypedField.h
PDCommon/Field/src/: Field.cpp  FieldManager.cpp  FieldRegistry.cpp  MechanicalFields.cpp  PhysicsFieldRegistry.cpp  PhysicsFields.cpp  ThermalFields.cpp
PDCommon/Fracture/: CMakeLists.txt
PDCommon/Fracture/include/: BondStretchFracture.h  DamageValueFracture.h  EqPSFracture.h  FractureModel.h  FractureRegistry.h  PreCrackModel.h  PreCrackRegistry.h  QuadCrack.h
PDCommon/Fracture/src/: BondStretchFracture.cpp  DamageValueFracture.cpp  EqPSFracture.cpp  FractureModel.cpp  FractureRegistry.cpp  QuadCrack.cpp
PDCommon/IO/: CMakeLists.txt
PDCommon/IO/include/: GrpdMeshReader.h  GrpdReader.h  IOManager.h  InpMeshReader.h  MeshData.h  MeshReader.h  Outputer.h  ReaderManager.h  ReaderRegistry.h  VtkWriter.h  Writer.h
PDCommon/IO/src/: GrpdMeshReader.cpp  GrpdReader.cpp  IOManager.cpp  InpMeshReader.cpp  MeshData.cpp  MeshReader.cpp  Outputer.cpp  ReaderManager.cpp  ReaderRegistry.cpp  VtkWriter.cpp  Writer.cpp
PDCommon/Initial/: CMakeLists.txt
PDCommon/Initial/include/: NeighborList.h
PDCommon/Initial/src/: Initial.cpp  NeighborList.cpp
PDCommon/Kernel/: CMakeLists.txt
PDCommon/Kernel/include/: BB_Base.h  KernelRegistry.h  MechanicalStabilizers.h  NOSB_Axis.h  NOSB_Base.h  NOSB_M.h  NOSB_T.h  PDKernel.h  Stabilizer.h  StabilizerRegistry.h  ThermalStabilizers.h
PDCommon/Kernel/src/: BB_Base.cpp  KernelRegistry.cpp  MechanicalStabilizers.cpp  NOSB_Axis.cpp  NOSB_Base.cpp  NOSB_M.cpp  NOSB_T.cpp  StabilizerRegistry.cpp  ThermalStabilizers.cpp
PDCommon/Material/: CMakeLists.txt
PDCommon/Material/include/: CreepMaterialBase.h  FourierThermalMat.h  J2PlasticityMat.h  J2VoceLemaitreMat.h  JCPlasticityMat.h  LinearElasticMat.h  Material.h  MaterialManager.h  MaterialRegistry.h  MechanicalMaterial.h  NortonBaileyCreepMat.h  StrainHardeningCreepMat.h  ThermalMat.h  ThermalMaterial.h  TimeHardeningCreepMat.h
PDCommon/Material/src/: CreepMaterialBase.cpp  FourierThermalMat.cpp  J2PlasticityMat.cpp  J2VoceLemaitreMat.cpp  JCPlasticityMat.cpp  LinearElasticMat.cpp  Material.cpp  MaterialManager.cpp  MaterialRegistry.cpp  NortonBaileyCreepMat.cpp  StrainHardeningCreepMat.cpp  ThermalMat.cpp  TimeHardeningCreepMat.cpp
PDCommon/Model/: CMakeLists.txt
PDCommon/Model/include/: Particle.h  ParticleManager.h
PDCommon/Model/src/: Particle.cpp  ParticleManager.cpp
PDCommon/Neighbor/: CMakeLists.txt
PDCommon/Neighbor/include/: ContactSearch.h  NeighborList.h
PDCommon/Neighbor/src/: NeighborList.cpp
PDCommon/PostProcessing/: CMakeLists.txt
PDCommon/PostProcessing/include/: PostProcessorBase.h  PostProcessorManager.h  PostProcessorRegistry.h  ReactionForceExtractor.h
PDCommon/PostProcessing/src/: PostProcessorManager.cpp  PostProcessorRegistry.cpp  ReactionForceExtractor.cpp
PDCommon/Utils/: CMakeLists.txt
PDCommon/Utils/include/: DataExtractor.h  Logger.h  MathUtils.h  StringUtils.h  Table.h  Timer.h
PDCommon/Utils/src/: Logger.cpp  Table.cpp
Src/: CMakeLists.txt  GRPD.h  Start.cpp  main.cpp  test_constitutive.cpp  test_io_manager_vtk_path.cpp  test_math_utils.cpp
Src/Engine/: CMakeLists.txt
Src/Engine/include/: Engine.h  EngineManager.h  EngineRegistry.h  SolverEngine.h
Src/Engine/src/: Engine.cpp  EngineManager.cpp  (+8 more)
Src/Integration/: CMakeLists.txt
Src/Solve/: CMakeLists.txt
Third/: CMakeLists.txt
(+2196 files in other folders)
